[package]
name = "fadupes"
version = "1.0.1"
edition = "2021"

[dependencies]
walkdir = "2.5.0"
crc32fast = "1.4.2"
claxon = "0.4.3"
tracing = "0.1.40"
clap = {version = "4.5.18", features = ["cargo"]}
hound = "3.5.1"
rayon = "1.10.0"
indicatif = "0.17.8"

[[bin]]
name = "fadupes"
path = "src/bin/main.rs"
